--- a/views/Layout/layout.html
+++ b/views/Layout/layout.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Octadecimal</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="/assets/css/style.css" rel="stylesheet" type="text/css"/>
     <!-- BOOTSTRAP -->
     <link href="/vendor/twbs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="/vendor/twbs/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -12,8 +12,9 @@
     <!-- BOOTSTRAP -->
 </head>
 <body>
-    <div class="container" style="text-align: center;">
-		<a href="mailto:piotr.adamczyk@octadecimal.pl"/><img src="assets/img/logo.png"/></a>
-    </div>
+<top>
+    {{ include('Layout/menu.html') }}
+</top>
+    {{ include(content) }}
 </body>
 </html>
